kustomizations/streaming/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app: prowlarr
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/part-of: streaming-stack
    tier: disposable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
        app.kubernetes.io/name: prowlarr
        app.kubernetes.io/part-of: streaming-stack
    spec:
      containers:
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr:2.6.5
        ports:
        - containerPort: 9696
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 1
            memory: 750Mi
        securityContext:
          runAsUser: 0
          runAsGroup: 0
          allowPrivilegeEscalation: true
          capabilities:
            drop: [ "ALL" ]
            add: [ "CHOWN", "SETGID", "SETUID" ]
        livenessProbe:
          tcpSocket:
            port: 9696
          initialDelaySeconds: 20
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
        readinessProbe:
          tcpSocket:
            port: 9696
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3
        volumeMounts:
        - name: config
          mountPath: /config
      nodeSelector:
        kubernetes.io/hostname: castillo
      volumes:
      - name: config
        hostPath:
          path: /mnt/prowlarr
          type: DirectoryOrCreate
