kustomizations/streaming/prowlarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  labels:
    app: prowlarr
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/part-of: streaming-stack
spec:
  selector:
    app: prowlarr
  ports:
  - name: http
    port: 9696
    targetPort: 9696
