kustomizations/streaming/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: prowlarr.citocafecito.work
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prowlarr
              port:
                number: 9696
